fix: fixing page with differences due to scrollbar presence

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,10 @@ body {
   line-height: 1.6;
 }
 
+html {
+  scrollbar-gutter: stable;
+}
+
 .container {
   max-width: 300px;
   margin: 0 auto;
